<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="auth.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/serverUrlEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/serverUrl"/>

        <EditText
            android:id="@+id/smartphoneIdEditText"
            android:layout_below="@+id/serverUrlEditText"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/smart_phone_id"/>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_below="@+id/smartphoneIdEditText"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_below="@+id/usernameEditText"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_below="@+id/passwordEditText"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>